AC_PREREQ(2.59)
AC_INIT([Pcap.hs],[0.0.1],[dominic.steinitz@blueyonder.co.uk])

AC_CONFIG_HEADER(config.h)

AC_TRY_RUN([
#include <sys/types.h>
#include <sys/socket.h>
int main ()
{
   u_int i = sizeof(((struct sockaddr *)0)->sa_len);
   return 0;
}
]
, [AC_DEFINE(SA_LEN, 1, if struct sockaddr has sa_len)]
, []
)

AC_OUTPUT