name:            pcap
version:         0.2
license:         BSD4
license-file:    LICENSE
synopsis:        pcap interface
description:     FFI Wrapper around libpcap
maintainer:      Bryan O'Sullivan <bos@serpentine.com>
author:          Bryan O'Sullivan, Nick Burlett, Dominic Steinitz, Gregory Wright (original author)
category:        Network
exposed-modules: Network.Pcap.Base
build-depends:   base, haskell98, network, time
extensions:      ForeignFunctionInterface
ghc-options:     -W
include-dirs:    include
includes:        pcapconfig.h
extra-source-files:
                 configure.ac configure include/pcapconfig.h.in
                 pcap.buildinfo.in
